@@ -1,3 +1,7 @@
+2020-08-06  Robby  <robby@periapsis.org>
+
+	* Updated KinoPoisk data source.
+
 2020-08-02  Robby  <robby@periapsis.org>
 
 	* Updated Allocine data source.
